# dragonfly-client-rs

./: .dockerignore  .git-blame-ignore-revs  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  Cargo.toml  Config-dev.toml  Containerfile  Dockerfile  README.md  book.toml  compose.yaml  rust-toolchain.toml
.cargo/: config.toml
.github/: dependabot.yaml
.github/workflows/: container-build-push.yaml  docker-build-push.yaml  image-build-push.yaml  mdbook.yaml  rust-ci.yaml  yara.yaml  zizmor.yaml
docs/: SUMMARY.md  building-locally.md  overview.md  tuning.md
src/: api.rs  api_models.rs  app_config.rs  client.rs  common.rs  dragonfly_api.rs  error.rs  exts.rs  main.rs  scanner.rs  temp.txt  test.rs  utils.rs
src/client/: methods.rs  models.rs
src/dragonfly_api/: methods.rs  mod.rs  models.rs
