[package]
name = "dragonfly-client-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.41"
color-eyre = "0.6.5"
figment = {version = "0.10.19", features = ["env", "toml"]}
flate2 = "1.1.2"
log = "0.4.27"
once_cell = "1.21.3"
parking_lot = "0.12.4"
reqwest = {version = "0.12.15", features = ["blocking", "json", "gzip"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.143"
tar = "0.4.44"
tempfile = "3.21.0"
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.20", features = ["env-filter"]}
walkdir = "2.5.0"
yara = "0.27.0"
yara-sys = {version = "0.27.0", features = ["yara-static"]}
zip = "4.6.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
