[package]
name = "dragonfly-client-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.38"
color-eyre = "0.6.3"
figment = {version = "0.10.19", features = ["env", "toml"]}
flate2 = "1.1.5"
log = "0.4.29"
once_cell = "1.20.2"
parking_lot = "0.12.3"
reqwest = {version = "0.13.1", features = ["blocking", "json", "gzip", "cookies"]}
serde = {version = "1.0.215", features = ["derive"]}
serde_json = "1.0.148"
tar = "0.4.43"
tempfile = "3.24.0"
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.22", features = ["env-filter"]}
walkdir = "2.5.0"
yara = "0.27.0"
yara-sys = {version = "0.27.0", features = ["yara-static"]}
zip = "7.0.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
