[package]
name = "dragonfly-client-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.42"
color-eyre = "0.6.5"
figment = {version = "0.10.19", features = ["env", "toml"]}
flate2 = "1.1.5"
log = "0.4.29"
once_cell = "1.21.3"
parking_lot = "0.12.5"
reqwest = {version = "0.13.1", features = ["blocking", "cookies", "gzip", "json", "query"]}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
tar = "0.4.44"
tempfile = "3.24.0"
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.22", features = ["env-filter"]}
walkdir = "2.5.0"
yara = "0.31.0"
yara-sys = {version = "0.31.0", features = ["yara-static"]}
zip = "7.0.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
